--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<main>
 			<div class="parallax parallax-1 pages">
 				<div class="container">
-					<!-- <img id="logo" src="assets/1985173_1.jpg"> -->
+					<img id="logo" src="assets/1985173_1.jpg">
 				</div>
 			</div>
 			<div class="parallax parallax-2 pages">
@@ -44,13 +44,13 @@
 					</ol>
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img class="d-block w-100" src="..." alt="First slide">
+							<img class="d-block w-100" src="assets/yukihara-img-1.jpg" alt="First slide">
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100" src="..." alt="Second slide">
+							<img class="d-block w-100" src="assets/yukihara-img-2.jpg" alt="Second slide">
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100" src="..." alt="Third slide">
+							<img class="d-block w-100" src="assets/yukihara-img-3.jpg" alt="Third slide">
 						</div>
 					</div>
 					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -65,51 +65,87 @@
 			</div>
 			<div class="parallax parallax-3 pages">
 				<div class="container">
+					<h2 class="page-header">Menu</h2>
 					<div class="row justify-content-around">
 						<div class="col">
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
-									<h4 class="display-4"></h1>
+									<h4 class="display-6">BREAKFAST</h4>
 									<hr>
-									<p class="lead"></p>
+									<p class="lead">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+										incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet consectetur 
+										adipiscing elit. Vestibulum mattis ullamcorper velit sed ullamcorper. Eu mi 
+										bibendum neque egestas congue quisque egestas. Quis lectus nulla at volutpat 
+										diam ut venenatis tellus. Scelerisque purus semper eget duis at tellus at urna 
+										condimentum. Urna molestie at elementum eu.
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
-									<h4 class="display-4"></h1>
+									<h4 class="display-6 menu-header">LUNCH</h4>
 									<hr>
-									<p class="lead"></p>
+									<p class="lead">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+										incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet consectetur 
+										adipiscing elit. Vestibulum mattis ullamcorper velit sed ullamcorper. Eu mi 
+										bibendum neque egestas congue quisque egestas. Quis lectus nulla at volutpat 
+										diam ut venenatis tellus. Scelerisque purus semper eget duis at tellus at urna 
+										condimentum. Urna molestie at elementum eu.
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
-									<h4 class="display-4"></h1>
+									<h4 class="display-6 menu-header">DINNER</h4>
 									<hr>
-									<p class="lead"></p>
+									<p class="lead">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+										incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet consectetur 
+										adipiscing elit. Vestibulum mattis ullamcorper velit sed ullamcorper. Eu mi 
+										bibendum neque egestas congue quisque egestas. Quis lectus nulla at volutpat 
+										diam ut venenatis tellus. Scelerisque purus semper eget duis at tellus at urna 
+										condimentum. Urna molestie at elementum eu.
+									</p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="row justify-content-around">
-						<div class="col">
+						<div class="col-5">
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
-									<h4 class="display-4"></h1>
+									<h4 class="display-6 menu-header">DESSERT</h4>
 									<hr>
-									<p class="lead"></p>
+									<p class="lead">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+										incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet consectetur 
+										dipiscing elit. Vestibulum mattis ullamcorper velit sed ullamcorper. Eu mi 
+										bibendum neque egestas congue quisque egestas. Quis lectus nulla at volutpat 
+										diam ut venenatis tellus. Scelerisque purus semper eget duis at tellus at urna 
+										condimentum. Urna molestie at elementum eu.
+									</p>
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-5">
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
-									<h4 class="display-4"></h1>
+									<h4 class="display-6 menu-header">BEVERAGES</h4>
 									<hr>
-									<p class="lead"></p>
+									<p class="lead">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+										incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet consectetur 
+										adipiscing elit. Vestibulum mattis ullamcorper velit sed ullamcorper. Eu mi 
+										bibendum neque egestas congue quisque egestas. Quis lectus nulla at volutpat 
+										diam ut venenatis tellus. Scelerisque purus semper eget duis at tellus at urna 
+										condimentum. Urna molestie at elementum eu.
+									</p>
 								</div>
 							</div>
 						</div>
@@ -118,13 +154,19 @@
 			</div>
 			<div class="parallax parallax-4 pages">
 				<div class="container">
+					<h2 class="page-header">News</h2>
 					<div class="row justify-content-around">
 						<div class="col-8">
-							<div class="jumbotron jumbotron-fluid">
+							<div class="promo">
 								<div class="container">
-									<h4 class="display-4"></h1>
-									<hr>
-									<p class="lead"></p>
+									<img src="assets/yukihara-news-1.jpg"/>
+									<p>
+										Quis lectus nulla at volutpat diam ut venenatis tellus. Scelerisque 
+										purus semper eget duis at tellus at urna condimentum. Urna molestie 
+										at elementum eu. Quis lectus nulla at volutpat diam ut venenatis 
+										tellus. Scelerisque purus semper eget duis at tellus at urna condimentum. 
+										Urna molestie at elementum eu.
+									</p>
 								</div>
 							</div>
 						</div>
@@ -132,7 +174,6 @@
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
 									<h4 class="display-4"></h1>
-									<hr>
 									<p class="lead"></p>
 								</div>
 							</div>
@@ -143,7 +184,6 @@
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
 									<h4 class="display-4"></h1>
-									<hr>
 									<p class="lead"></p>
 								</div>
 							</div>
@@ -152,7 +192,6 @@
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
 									<h4 class="display-4"></h1>
-									<hr>
 									<p class="lead"></p>
 								</div>
 							</div>
@@ -160,7 +199,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="parallax parallax-5 pages">
+			<!-- <div class="parallax parallax-5 pages">
 				<div class="container">
 					<h3>Yukihira</h3>
 					<p>
@@ -182,18 +221,18 @@
 						porttitor rhoncus. Cursus turpis massa tincidunt dui. Molestie at elementum eu facilisis sed odio.
 					</p>
 				</div>
-			</div>
+			</div> -->
 		</main>
-		<footer class="footer">
-			<!-- <div>
+		<!-- <footer class="footer">
+			<div>
 				<ul>
 					<li><a href="#"><img src=""></a></li>
 					<li><a href="#"><img src=""></a></li>
 					<li><a href="#"><img src=""></a></li>
 					<li><a href="#"><img src=""></a></li>
 				</ul>
-			</div> -->
-		</footer>
+			</div>
+		</footer> -->
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
