working on margin 0

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 			</nav>
 		</header>
 		<main>
-			<div class="parallax parallax-1 pages">
+			<!-- <div class="parallax parallax-1 pages">
 				<div class="container">
 					<img id="logo" src="assets/1985173_1.jpg">
 				</div>
-			</div>
-			<div class="parallax parallax-2 pages">
+			</div> -->
+			<!-- <div class="parallax parallax-2 pages">
 				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 					<ol class="carousel-indicators">
 						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -62,11 +62,11 @@
 						<span class="sr-only">Next</span>
 					</a>
 				</div>
-			</div>
-			<div class="parallax parallax-3 pages">
+			</div> -->
+			<!-- <div class="parallax parallax-3 pages">
 				<div class="container">
 					<h2 class="page-header">Menu</h2>
-					<div class="row justify-content-around">
+					<div class="row justify-content-between">
 						<div class="col">
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
@@ -116,7 +116,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row justify-content-around">
+					<div class="row justify-content-between">
 						<div class="col-5">
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
@@ -157,13 +157,60 @@
 					<h2 class="page-header">News</h2>
 					<div class="row justify-content-around">
 						<div class="col-8">
-							<div class="promo">
-								<div class="container">
+							<div class="container">
+								<div class="promo promo-1">
 									<img src="assets/yukihara-news-1.jpg"/>
 									<p>
 										Quis lectus nulla at volutpat diam ut venenatis tellus. Scelerisque 
 										purus semper eget duis at tellus at urna condimentum. Urna molestie 
 										at elementum eu. Quis lectus nulla at volutpat diam ut venenatis 
+										tellus. Scelerisque purus semper eget duis at tellus at urna condimentum. 
+										Urna molestie at elementum eu. Quis lectus nulla at volutpat diam ut venenatis 
+										tellus. Quis lectus nulla at volutpat diam ut venenatis tellus. Scelerisque 
+										purus semper eget duis at tellus at urna condimentum. Urna molestie 
+										at elementum eu. Quis lectus nulla at volutpat diam ut venenatis 
+										tellus. Scelerisque purus semper eget duis at tellus at urna condimentum. 
+										Urna molestie at elementum eu. Quis lectus nulla at volutpat diam ut venenatis.
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class=" promo promo-2">
+								<div class="promo-2-grid">
+									<div class="grid-1">
+										Shangha
+									</div>
+									<div class="grid-2">
+										Tokyo
+									</div>	  
+									<div class="grid-3">
+										New York City
+									</div>  
+									<div class="grid-4">
+										Los Angles
+									</div>
+								</div>
+								<p>
+									Quis lectus nulla at volutpat diam ut venenatis tellus. Scelerisque 
+									purus semper eget duis at tellus at urna condimentum. Urna molestie 
+									at elementum eu.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="row justify-content-around">
+						<div class="col-8">
+							<div class="container">
+								<div class="promo promo-3">
+									<p>
+										Quis lectus nulla at volutpat diam ut venenatis tellus. Scelerisque 
+										purus semper eget duis at tellus at urna condimentum. Urna molestie 
+										at elementum eu. Quis lectus nulla at volutpat diam ut venenatis 
+										tellus. Scelerisque purus semper eget duis at tellus at urna condimentum. 
+										Urna molestie at elementum eu. Quis lectus nulla at volutpat diam ut venenatis 
+										tellus. Scelerisque purus semper eget duis at tellus at urna condimentum. 
+										Urna molestie at elementum eu. Quis lectus nulla at volutpat diam ut venenatis 
 										tellus. Scelerisque purus semper eget duis at tellus at urna condimentum. 
 										Urna molestie at elementum eu.
 									</p>
@@ -171,34 +218,20 @@
 							</div>
 						</div>
 						<div class="col-4">
-							<div class="jumbotron jumbotron-fluid">
-								<div class="container">
-									<h4 class="display-4"></h1>
-									<p class="lead"></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row justify-content-around">
-						<div class="col-8">
-							<div class="jumbotron jumbotron-fluid">
-								<div class="container">
-									<h4 class="display-4"></h1>
-									<p class="lead"></p>
-								</div>
-							</div>
-						</div>
-						<div class="col-4">
-							<div class="jumbotron jumbotron-fluid">
-								<div class="container">
-									<h4 class="display-4"></h1>
-									<p class="lead"></p>
+							<div class="container">
+								<div class="promo promo-4">
+									<img src="assets/yukihara-news-2.jpg"/>
+									<p>
+										Quis lectus nulla at volutpat diam ut venenatis 
+										tellus. Scelerisque purus semper eget duis at tellus at urna condimentum. 
+										Urna molestie at elementum eu.
+									</p>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!-- <div class="parallax parallax-5 pages">
 				<div class="container">
 					<h3>Yukihira</h3>
